# smartmirror

./: .prettierrc.json  Cargo.toml  Dioxus.toml  eslint.config.js  index.html  input.css  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  vite.config.ts
assets/: tailwind.css
src/: App.tsx  Clock.tsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: alert.rs  heading.rs  mod.rs  news.rs  weather.rs
src/weather/: Weather.tsx  WeatherDay.tsx  WeatherDayGraph.tsx  wmo-codes.tsx
