[package]
name = "smartmirror"
version = "0.1.0"
authors = ["Dan O'Brien <dob9601@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
itertools = "0.13.0"
